--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </section>  
     </section>
     
-    <section style="position: relative; width: 100%; height: 50vh; background-color: #ffffff;">
+    <section class="Works-Container-Myworks-Section" style="position: relative; width: 100%; height: 50vh; background-color: #ffffff;">
         <div class="Works-Container-Header">
             <div style="margin: 0 3rem 0 0; width: 100vw; height: 1px; background-color: black; position: absolute; right: 0; top: 3.5rem; padding-right: 2rem; margin: 0px;"> </div>
             <div class="Works-Container-Header-text"><h5>WORKS</h5></div>
@@ -394,7 +394,7 @@
 
 
 
-    <section style="position: relative; width: 100%; height: 35vh; background-color: #272727;">
+    <section class="Works-Container-Section">
         <div class="Works-Container-Header">
             <div style="margin: 0 3rem 0 0; width: 100vw; height: 1px; background-color: rgb(255, 255, 255); position: absolute; right: 0; top: 3.5rem; padding-right: 2rem; margin: 0px;"> </div>
             <div class="Works-Container-Header-text"><h5 style="color: white;" >CERTIFICATES</h5></div>
