--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
                     <section class="Nav-collum-container AboutMeNavSection0">
                         <!-- Main Information -->
                         <div>
-                            <h1 class="Nav-Header-Text" style="z-index: 10;"> print('Hello World'), <br>my name is Nattatapol Sawatmoon</h1>
-                            <h1 class="Nav-Header-Content" style="z-index: 10;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe labore <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe labore</h1>
+                            <h1 class="Nav-Header-Text" style="z-index: 10;">Nattatapol Sawatmoon</h1>
+                            <h1 class="Nav-Header-Content" style="z-index: 10;"> 
+                                My name is Nattatapol,
+                                <br>I was born on Nov 3, 2003. I always like to invest in learning. 
+                                <br>My motto is perseverance, determination, perseverance, always cultivating knowledge, never stopping to develop.
+                            </h1>
                         </div>
                         
                             <div class="Nav-name-box">
@@ -103,27 +107,27 @@
                     <!-- Icon -->
                     <section class="Nav-IconWrapper-container">
                         <div class="IconWrapper">
-                            <a href="https://facebook.com/danishlaeeq1998">
+                            <a href="https://www.facebook.com/nttp.Sawatmoon" target="_blank">
                             <div class="icon facebook">
                                 <span><i class="fab fa-facebook"></i></span>
                             </div>
                             </a>
-                            <a href="https://instagram.com/_danishlaeeq">
+                            <a href="https://www.instagram.com/call.me.ton/" target="_blank">
                             <div class="icon instagram">
                                 <span><i class="fab fa-instagram"></i></span>
                             </div>
                             </a>
-                            <a href="https://github.com/danishlaeeq">
+                            <a href="https://github.com/MaledKhaoSan" target="_blank">
                             <div class="icon github">
                                 <span><i class="fab fa-github"></i></span>
                             </div>
                             </a>
-                            <a href="https://twitter.com/_danishlaeeq">
+                            <a href="https://line.me/ti/p/fiEYhUckHJ">
                                 <div class="icon line">
                                 <span><i class="fab fa-line"></i></span>
                                 </div>
                             </a>
-                            <a href="https://youtube.com">
+                            <a href="tel:+66956634535">
                             <div class="icon phone">
                                 <span><i class="fas fa-phone"></i></span>
                             </div>
