--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                         <!-- Main Information -->
                         <div>
                             <h1 class="Nav-Header-Text" style="z-index: 10;">Nattatapol Sawatmoon</h1>
-                            <h1 class="Nav-Header-Content" style="z-index: 10;"> 
-                                My name is Nattatapol,
+                            <h1 class="Nav-Header-Content" style="z-index: 10;">My name is Nattatapol,
                                 <br>I was born on Nov 3, 2003. I always like to invest in learning. 
                                 <br>My motto is perseverance, determination, perseverance, always cultivating knowledge, never stopping to develop.
                             </h1>
