--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W1.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>โรงเรียนของเราน่าอยู่ <a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>โรงเรียนของเราน่าอยู่ <a href="https://maledkhaosan.github.io/"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#JavaScript</h1> <h1>#CSS</h1> <h1>#HTML</h1>
                         </div>
@@ -272,7 +272,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W2.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>SINGLAB<a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>SINGLAB<a href="https://www.behance.net/gallery/132738491/SINGLAB"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#Figma</h1> <h1>#Photoshop</h1>
                         </div>
@@ -283,7 +283,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W3.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>HingHoi: chatbot <a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>HingHoi: chatbot <a href="https://line.me/R/ti/p/@368uhtqc"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#JavaScript</h1> <h1>#JSON</h1>
                         </div>
@@ -294,7 +294,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W4.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>Science-Math 13 <a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>Science-Math 13 <a href="https://ouryearbook.000webhostapp.com/index.php"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#PHP</h1> <h1>#SQL</h1> <h1>#SCSS</h1> <h1>#CSS</h1>
                         </div>
@@ -306,7 +306,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W5.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>Venderur<a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>Venderur<a href="https://maledkhaosan.github.io/VENDERUR/"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#JavaScript</h1> <h1>#CSS</h1> <h1>HTML</h1>
                         </div>
@@ -317,7 +317,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W6.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>Encourage quotes<a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>Encourage quotes<a href="https://maledkhaosan.github.io/encourage-quotes/"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#JavaScript</h1> <h1>#CSS</h1> <h1>#HTML</h1>
                         </div>
@@ -328,7 +328,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W7.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>GinRiDee <a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>GinRiDee <a href="https://maledkhaosan.github.io/GinRiDee/"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#JavaScript</h1> <h1>#CSS</h1> <h1>#HTML</h1>
                         </div>
@@ -339,7 +339,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W8.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>Minecraft Builder<a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>Minecraft Builder<a href="https://www.instagram.com/___khaosan/"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#Minecraft</h1> <h1>#Blender3D</h1> <h1>#Sketchup</h1>
                         </div>
@@ -350,7 +350,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W9.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>Student syndrome <a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>Student syndrome <a href="https://khaosan.itch.io/student-syndrome"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#Unity</h1> <h1>C#</h1> <h1>#Photoshop</h1>
                         </div>
@@ -361,7 +361,7 @@
                 <div class="SlideFunction">
                     <img src="IMG/MYWORK/W10.png" class="slideshow-item" alt="">
                     <div class="slideshow-item-text">
-                        <h5>SDGs Game Fest <a href="https://www.youtube.com/watch?v=IOrbP1OqNsg"  target="_blank" class="fab fa-github"></a> </h5>
+                        <h5>SDGs Game Fest <a href="https://khaosan.itch.io/sdgs-game-fest"  target="_blank" class="fab fa-github"></a> </h5>
                         <div style="display: flex;">
                             <h1>#Unity</h1> <h1>C#</h1> <h1>#Photoshop</h1>
                         </div>
