--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Portfolio</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="IMG/F5.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="IMG/AboutMe/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- //Style -->
