--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <span><i class="fab fa-github"></i></span>
                             </div>
                             </a>
-                            <a href="https://line.me/ti/p/fiEYhUckHJ">
+                            <a href="https://line.me/ti/p/fiEYhUckHJ" target="_blank">
                                 <div class="icon line">
                                 <span><i class="fab fa-line"></i></span>
                                 </div>
