--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <span><i class="fab fa-facebook"></i></span>
                             </div>
                             </a>
-                            <a href="https://www.instagram.com/call.me.ton/" target="_blank">
+                            <a href="https://www.instagram.com/khxoismynickname/" target="_blank">
                             <div class="icon instagram">
                                 <span><i class="fab fa-instagram"></i></span>
                             </div>
